force-app/main/default/objects/RC_SMS_Thread__c/RC_SMS_Thread__c.object-meta.xml
<CustomObject>
    <label>RC SMS Thread</label>
    <nameField>
        <displayFormat>THREAD-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RC SMS Threads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>