force-app/main/default/objects/RC_SMS_Thread__c/fields/All_Messages__c.field-meta.xml
<CustomField>
    <fullName>All_Messages__c</fullName>
    <label>All Messages</label>
    <summaryForeignKey>RC_SMS_Record__c.RC_SMS_Thread__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>