force-app/main/default/objects/RC_SMS_Thread__c/fields/Outbound_Count__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Count__c</fullName>
    <label>Outbound Count</label>
    <summaryFilterItems>
        <field>RC_SMS_Record__c.Direction__c</field>
        <operation>equals</operation>
        <value>Outbound</value>
    </summaryFilterItems>
    <summaryForeignKey>RC_SMS_Record__c.RC_SMS_Thread__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>